[FIX] web, portal, website, website_sale: `text-primary` readability
This commit normalizes rendering to improve readability for text
elements using the `text-primary` class.

While links benefit from a contrast-check feature [1], elements using
`text-primary` rely on `$primary` (color-1) directly, resulting in color
inconsistencies between links and text, as well as readability issues.

The addition of "pastel palettes" [2] made this issue even more
pronounced.

This commit:
- Adds `text-primary-emphasis` class to `text-primary` elements, taking
  priority.
- Introduces a contrast-check for `text-emphasis-*` colors, ensuring
  links and "primary text" share the same color in cases of low contrast.
  If contrast is sufficient, the default Bootstrap computation is used.
- Ensure that the `$component-active-color` contrast-check function has
  a color to compute against.

[1] https://github.com/odoo/odoo/pull/58739
[2] https://github.com/odoo/odoo/pull/172463

task-4332082

closes odoo/odoo#187108

--- a/addons/website/static/src/scss/bootstrap_overridden.scss
+++ b/addons/website/static/src/scss/bootstrap_overridden.scss
@@ -83,6 +83,13 @@ $link-hover-color: auto-contrast(darken($link-color, 15%), $body-bg, 'o-cc1-link
 $link-decoration: if(o-website-value('link-underline') == 'always', underline, none) !default;
 $link-hover-decoration: if(o-website-value('link-underline') != 'never', underline, none) !default;
 
+// Emphasis
+//
+// For higher contrast text. Not applicable for backgrounds.
+
+// Increase contrast when needed, otherwise fallback to BS default
+$primary-text-emphasis: if(not has-enough-contrast(o-color('primary'), $body-bg), increase-contrast(o-color('primary'), $body-bg), null) !default;
+
 // Grid
 $grid-gutter-width: 30px !default;
 
@@ -96,7 +103,7 @@ $border-color: var(--o-border-color) !default;
 // Note: for the 'active' color, color preset edition is not really flexible but
 // this could come in a future update.
 $component-active-bg: o-color('o-cc1-btn-primary') !default;
-$component-active-color: if($component-active-bg, color-contrast($component-active-bg), null) !default;
+$component-active-color: color-contrast($component-active-bg or o-color('primary')) !default;
 
 // Fonts
 //
